--- a/BioCro/DARPA/biocro_regional_darpa_files/subset_weather.Rmd
+++ b/BioCro/DARPA/biocro_regional_darpa_files/subset_weather.Rmd
@@ -36,13 +36,16 @@ library(ggplot2)
 The first example shows the four corners of a long latitudinal slice that includes area in both China and Russia. Change out the `lat` and `lon` values in the data frame and the filtered region in the `background_map` as desired. 
 
 ```{r}
-chiruss_corners = expand.grid(lat = c(44.9, 55.1), 
-                             lon = c(123.9, 127.1))
-background_map <- map_data("world") %>% 
+chiruss_corners = expand.grid(lat = c(30.1, 70.1),
+                              lon = c(87.1, 87.6))
+background_map <- map_data("world") %>%
   filter(region == "China" | region == "Russia")
-ggplot() +
-  geom_polygon(data = background_map, aes(x = long, y = lat, group = group), fill = "white", color = "black") +
-  geom_point(data = chiruss_corners, aes(x = lon, y = lat), color = "red")
+ggplot()  +
+  geom_polygon(data = background_map, aes(x = long, y = lat, group = group), fill = NA, color = "black") +
+  geom_point(data = chiruss_corners, aes(x = lon, y = lat), color = "red") +
+  geom_path(color = "white") +
+  coord_equal() +
+  theme(legend.position = "none")
 ```
 
 This plot shows the limits of the NARR `all.nc` file. 
@@ -85,7 +88,7 @@ ncks -O -d longitude,-108.5,-105.5 -d latitude,45.5,55.5 all.nc usca.nc
 Russia/China (*this will only work with the CRUNCEP all.nc*):
 
 ```{shell}
-ncks -O -d longitude,123.9,127.1 -d latitude,44.9,55.1 all.nc chiruss.nc
+ncks -O -d longitude,87.1,87.9 -d latitude,30.1,70.1 all.nc chiruss.nc
 ```
 
 ### 4. Copy to local machine using Globus
