Improve text explanations, remove redundant code, and fix errors in biomass partitioning vignette

--- a/BioCro/DARPA/biocro_biomass_darpa.Rmd
+++ b/BioCro/DARPA/biocro_biomass_darpa.Rmd
@@ -79,14 +79,13 @@ time <- data.frame(year = rep(2019, 8760),
 OpBioGro_weather <- data.frame(time, solarR = downscaled.result$FSDS, DailyTemp.C, RH, WindSpeed, precip)
 ```
 
-Summarize Weather
-
+Several different visualizations to check these weather data are created. 
 ```{r}
 skimr::skim(OpBioGro_weather)
 ```
 
 ```{r}
-tabplot::tableplot(OpBioGro_weather)
+tabplot::tableplot(OpBioGro_weather, sortCol = "doy")
 ```
 
 ```{r, fig.width=10}
@@ -109,8 +108,7 @@ ggplot(t %>% filter(month(date) ==1), aes(date, value)) +
 
 Plants all started to grow at same time (Jan 3, 2019). Plants harvested on six different dates, from Jan 15 - Feb 19. The plants were grown at three different temperatures, and there were three genotypes. Initially only using data for the middle temperature (31*C) and the first replicate from that. 
 
-Got biomass data for stem, leaf, and root from data and used zeroes for rhizome and grain. Calculated thermal times for weather data using `BioGro`, then used the ones for the same day of year as the plants were grown before harvested. Last, used an estimated SLA combined with leaf mass to get LAI values. 
-
+Biomass measurements are estimates from pixel sizes for images taken of plants. 
 ```{r}
 library(BioCro)
 
@@ -124,17 +122,18 @@ biomass_data_all <- read.csv("biomass_setaria_me034_gehan.csv") %>%
 skimr::skim(biomass_data_all %>% select(temperature_celsius, panicle.FW.g.:roots.DW..mg.))
 ```
 
+Plot of first replicate 31*C dry weights for stem, leaf, panicle/grain, and roots across six time points when biomass was measured. 
 ```{r}
 s <- biomass_data_all %>% 
   mutate(date = lubridate::mdy(biomas_harvested)) %>% 
-  select(temperature_celsius, date, contains('.DW.')) %>% 
+  select(temperature_celsius, date, contains('DW.')) %>% 
   tidyr::pivot_longer(panicle.DW.mg.:roots.DW..mg.)
 
 ggplot(s, aes(date, value, color = name)) +
   geom_line() 
 ```
 
-
+Added how many days each plant was grown before harvested to the biomass dataframe. Then calculated thermal times for weather data using `BioGro`, using only the thermal times for the days of harvest. 
 ```{r}
 biomass_data_single <- biomass_data_all %>% 
   mutate(days_grown = as.integer(as.Date(as.character(biomas_harvested),format="%m/%d/%Y") - as.Date(as.character(seeds_in_germination),format="%m/%d/%Y")))
@@ -145,7 +144,10 @@ weather_only_run_df <- as.data.frame(unclass(weather_only_run)[1:11]) %>%
   filter(Hour == 0, 
          DayofYear %in% biomass_data_single$days_grown) %>% 
   mutate(days_grown = DayofYear)
+```
 
+Combined biomass data for stem, leaf, panicle/grain, and root from data with corresponding calculated thermal time. Added in values of zero for rhizome at each thermal time point. Lastly estimated LAI using leaf biomass measurements with SLA. All values are plotted against thermal time. 
+```{r}
 SLA_mg <- 80 / 1000000
 OpBioGro_biomass <- left_join(biomass_data_single, weather_only_run_df, by = "days_grown") %>% 
   select(ThermalT, Stem = stemDW.mg., Leaf = leaf.DW.mg., Root = roots.DW..mg., Grain = panicle.DW.mg.) %>% 
@@ -153,67 +155,47 @@ OpBioGro_biomass <- left_join(biomass_data_single, weather_only_run_df, by = "da
          LAI = SLA_mg * Leaf)
 OpBioGro_biomass <- data.frame(OpBioGro_biomass) %>% 
   arrange(ThermalT)
+
+OpBioGro_biomass_plot <- OpBioGro_biomass %>% 
+  tidyr::pivot_longer(Stem:LAI)
+ggplot(OpBioGro_biomass_plot %>% filter(name != "LAI"), aes(x = ThermalT, y = value, color = name)) +
+  geom_line() +
+  ylab("Dry Weight (mg)")
+ggplot(OpBioGro_biomass_plot %>% filter(name == "LAI"), aes(x = ThermalT, y = value)) +
+  geom_line() +
+  ylab("Leaf Area Index (units?)")
 ```
 
 ### Estimate coefficients
 
+Updating phenological parameters that will go into partitioning estimates. This includes setting the thermal times to correspond to the dates of biomass measurements, and setting all rhizome growth values to zero so that this stays zero. Otherwise using default values. 
 ```{r}
-#coef_estimates <- valid_dbp(idbp(OpBioGro_biomass))
-
-z <- OpBioGro_biomass
-library(ggplot2)
-library(tidyverse)
-ggplot(z %>% tidyr::pivot_longer(Stem:LAI), aes(ThermalT, value, color = name)) +
-  geom_line() 
-# z[5,2:4] <- c(776, 318, 222)
-# z[6,2:4] <- c(800, 368, 252)
-# ggplot(z %>% tidyr::pivot_longer(Stem:LAI), aes(ThermalT, value, color = name)) +
-#   geom_line() 
-
-zz<-rbind(rep(0,6), z)
-
 p <- phenoParms() 
-p[1:6] <- z$ThermalT#c(400, 600, 800, 1000, 1200, 1500)
+p[1:6] <- OpBioGro_biomass$ThermalT#c(400, 600, 800, 1000, 1200, 1500)
 p['kRhizome1'] <- 0
 p['kRhizome2'] <- 0
 p['kRhizome3'] <- 0
 p['kRhizome4'] <- 0
 p['kRhizome5'] <- 0
 p['kRhizome6'] <- 0
-
-x <- idbp(z, phenoControl = p)
-x[8] <- 0
-valid_dbp(x)
-#biomass_coefs <- OpBioGro(phen = 0, WetDat = OpBioGro_weather, data = OpBioGro_biomass, iCoef = x)
 ```
 
+Generate initial guesses at coefficients using these updated phenological parameters and the measured biomass values using `idbp`. These values than are validated using `valid_dbp`. The eighth value had to be changed manually to pass this validation step because it was initially shown as `Inf`. 
 ```{r}
-z <- OpBioGro_biomass
-ggplot(z %>% tidyr::pivot_longer(Stem:LAI), aes(ThermalT, value, color = name)) +
-  geom_line() 
- p <- list(tp1 = 338.581104166667, tp2 = 553.227354166667, tp3 = 767.873604166667, 
-           tp4 = 982.519854166666, tp5 = 1197.16610416666, tp6 = 1411.81235416666, 
-           kStem1 = 0.25, kLeaf1 = 0.5, kRoot1 = 0.25, kRhizome1 = 0, #kGrain1 = 0.0, 
-           kStem2 = 0.25, kLeaf2 = 0.5, kRoot2 = 0.25, kRhizome2 = 0, #kGrain1 = 0.0,
-           kStem3 = 0.25, kLeaf3 = 0.25, kRoot3 = 0.25, kRhizome3 = 0, #kGrain1 = 0.25,
-           kStem4 = 0.25, kLeaf4 = 0.25, kRoot4 = 0.25, kRhizome4 = 0, #kGrain1 = 0.25,
-           kStem5 = 0.25, kLeaf5 = 0.25, kRoot5 = 0.25, kRhizome5 = 0, #kGrain1 = 0.25,
-           kStem6 = 0.25, kLeaf6 = 0.25, kRoot6 = 0.25, kRhizome6 = 0, kGrain1 = 0.25)
-p[1:6] <- OpBioGro_biomass$ThermalT
-x <- idbp(z, phenoControl = p)
-x[8] <- 0
-valid_dbp(x)
-zzz <- OpBioGro_biomass %>% 
-  mutate(LAI = LAI*10)
-zzz <- zzz[,c("ThermalT", "Stem", "Leaf", "Root", "Rhizome", "Grain", "LAI")]
-biomass_coefs <- constrOpBioGro(phen = c(1,3,4,5,6), 
-                          WetDat = OpBioGro_weather, 
-                          day1 = 1,
-                          dayn = 35,
-                          data = OpBioGro_biomass, 
-                          iCoef = x, 
-                          iRhizome=0,
-                          phenoControl = p)
+initial_coefs <- idbp(OpBioGro_biomass, phenoControl = p)
+initial_coefs[8] <- -0.000000000000001
+valid_dbp(initial_coefs)
+```
+
+The previously generated weather data, along with those initial estimated biomass coefficients and the biomass measurements, are passed to the function that optimizes for biomass partitioning coefficients. This is optimized for all six phenological stages because of the `phen` argument. 
+```{r}
+# defaults day1 = 90; dayn = 330
+biomass_coefs <- constrOpBioGro(phen = 0, 
+                                WetDat = OpBioGro_weather,
+                                data = OpBioGro_biomass, 
+                                iCoef = initial_coefs, 
+                                iRhizome = 0, 
+                                phenoControl = p)
 biomass_coefs
 ```
 
