--- a/BioCro/DARPA/biocro_biomass_darpa.Rmd
+++ b/BioCro/DARPA/biocro_biomass_darpa.Rmd
@@ -9,112 +9,88 @@ For biomass partitioning using [`OpBioGro`](https://github.com/ebimodeling/biocr
 
 ### Weather data
 
-From CLM file `clm_version.nc` to a dataframe with hourly rows and five weather variables. 
-
-BioCro var name   | BioCro var unit | CLM var name | CLM var unit    
------------------ | --------------- | ------------ | ------------    
-solarR            | umol/m2/s       | FSDS         | W/m2 (J/m2/s)           
-DailyTemp.C       | C               | TBOT         | K               
-RH                | 0-1             | RH           | %               
-WindSpeed         | m/s             | WIND         | m/s                
-precip            | mm (mm/h)       | PRECTmms     | mm/s                
-
-Need to downscale all weather data from every three hours to hourly, and also convert some units, as shown in the table above. 
-
-Specific downscaling and conversion for each variable: 
-
-1. Radiation: used spline interpolation from PEcAn (https://github.com/PecanProject/pecan/blob/develop/modules/data.atmosphere/R/temporal.downscaling.R#L48), converted from W/m2 (1 W/m2 = 4.6 umol/m2/s)
-2. Temperature: made three copies of each value, and converted from K to C
-3. Humidity: made three copies of each value, and converted from percentage to 0-1 scale
-4. Wind: no wind, filled in with zeroes
-5. Precipitation: filled in with zeroes, didn't convert single daily value
-
-Read in data and libraries: 
+Assemble weather dataframe: 
 ```{r}
-library(ncdf4)
-library(dplyr)
-library(lubridate)
-clm_met <- nc_open("clm_version.nc")
+OpBioGro_weather <- data.frame(year = rep(2019, 8760), 
+                               doy = rep(1:365, each = 24), 
+                               hour = rep(seq(0, 23), 365), 
+                               solarR = rep(c(0, 936), times = 365, each = 12),
+                               DailyTemp.C = rep(31, times = 365 * 24), 
+                               RH = rep(55.5 / 100,  times = 365 * 24), 
+                               WindSpeed = rep(0, times = 365 * 24), 
+                               precip = rep(c(0.000462963, rep(0, 23)), 365))
 ```
 
-Do variable conversions and downscaling: 
-```{r}
-DailyTemp.C <- rep(31, times = 365 * 24)
-RH <- rep(55.5 / 100,  times = 365 * 24)
-WindSpeed <- rep(0, times = 365 * 24) # always 0
-PRECTmms <- ncvar_get(clm_met, "PRECTmms")
-precip <- rep(c(unique(PRECTmms)[1], rep(0, 23)), 365)
-FSDS <- rep(c(0, 936), times = 365, each = 12) #ncvar_get(clm_met, "FSDS") * 4.6
-```
-
-Assemble final weather dataframe: 
-```{r}
-time <- data.frame(year = rep(2019, 8760), 
-                   doy = rep(1:365, each = 24), 
-                   hour = rep(seq(0, 23), 365))
-OpBioGro_weather <- data.frame(time, solarR = FSDS, DailyTemp.C, RH, WindSpeed, precip)
-```
-
-Several different visualizations to check these weather data are created. 
-```{r}
-skimr::skim(OpBioGro_weather)
-```
-
-```{r}
-tabplot::tableplot(OpBioGro_weather, sortCol = "doy")
-```
-
+Visualize these data: 
 ```{r, fig.width=10}
-t <- OpBioGro_weather %>% 
-  mutate(date = new.date$date) %>% 
+library(dplyr)
+library(ggplot2)
+library(lubridate)
+
+OpBioGro_weather_plot <- OpBioGro_weather %>% 
+  mutate(date = seq(as.POSIXct("2019-01-01 00:00:00"), 
+                    as.POSIXct("2019-12-31 23:00:00"), 
+                    by = "hour")) %>% 
   dplyr::select(solarR:date) %>% 
   tidyr::pivot_longer(cols = solarR:precip)
-t
 
-library(ggplot2)
-ggplot(t, aes(date, value)) +
+ggplot(OpBioGro_weather_plot, aes(date, value)) +
   geom_line(size = 0.1) + 
   facet_wrap(~name, ncol = 1, scales = 'free_y')
 
-ggplot(t %>% filter(month(date) ==1 & day(date) < 5), aes(date, value)) +
-  geom_line(size = 0.1) + 
-  facet_wrap(~name, ncol = 1, scales = 'free_y')
+ggplot(OpBioGro_weather_plot %>% filter(month(date) ==1 & day(date) < 3), aes(date, value)) +
+    geom_line() + 
+    facet_wrap(~name, ncol = 1, scales = 'free_y')
 ```
+
 ### Biomass data
 
-Plants all started to grow at same time (Jan 3, 2019). Plants harvested on six different dates, from Jan 15 - Feb 19. The plants were grown at three different temperatures, and there were three genotypes. Initially only using data for the middle temperature (31*C) and the first replicate from that. 
+[These data](https://docs.google.com/spreadsheets/d/1Nc2g-gPEb-rUW9R4QLDqAZvRRYk1whWAJlb8kLEQZ5c/edit#gid=0) are in the project's Google Drive. They have been downloaded and saved as `biomass_setaria_me034_gehan.csv`. 
 
-Biomass measurements are estimates from pixel sizes for images taken of plants. 
+Plants all started to grow at same time (Jan 3, 2019). Plants harvested on six different dates, from Jan 15 - Feb 19. The plants were grown at three different temperatures, and there were three genotypes. Initially only using data for the middle temperature (31*C) and taking the mean of the three values. Biomass measurements are from destructively harvesting plants, so plants from different harvest dates are different plants.  
 ```{r}
-library(BioCro)
-
 biomass_data_all <- read.csv("biomass_setaria_me034_gehan.csv") %>% 
   filter(genotype == "ME034V-1", 
-         temperature_celsius == 31) %>% 
-  group_by(biomas_harvested) %>% 
-  slice(1) %>% 
-  ungroup()
-
-skimr::skim(biomass_data_all %>% select(temperature_celsius, panicle.FW.g.:roots.DW..mg.))
+         temperature_celsius == 31)
 ```
 
-Plot of first replicate 31*C dry weights for stem, leaf, panicle/grain, and roots across six time points when biomass was measured. 
+Plot of three replicate 31*C dry weights for stem, leaf, panicle/grain, and roots across six time points when biomass was measured. 
 ```{r}
 s <- biomass_data_all %>% 
   mutate(date = lubridate::mdy(biomas_harvested)) %>% 
   select(temperature_celsius, date, contains('DW.')) %>% 
   tidyr::pivot_longer(panicle.DW.mg.:roots.DW..mg.)
 
-ggplot(s, aes(date, value, group = name)) +
-  geom_line()+
-  geom_point(aes(color = name))
+s2 <- s %>% 
+  group_by(date, name) %>% 
+  summarize(value_mean = mean(value), 
+            value_sd = sd(value)) %>% 
+  mutate(sd_high = value_mean + value_sd, 
+         sd_low = value_mean - value_sd)
 
+ggplot(s, aes(date, value, color = name)) +
+  geom_point() +
+  facet_wrap(~name)
+
+ggplot(s2, aes(date, value_mean, color = name)) +
+  geom_point() +
+  geom_errorbar(aes(ymin = sd_low, ymax = sd_high)) +
+  facet_wrap(~name)
+
+ggplot(s, aes(date, value, color = name)) +
+  geom_smooth(method = "lm", fill = NA) +
+  geom_point(shape = 4)
 ```
 
-Added how many days each plant was grown before harvested to the biomass dataframe. Then calculated thermal times for weather data using `BioGro`, using only the thermal times for the days of harvest. 
+Calculated mean for each plant part and harvest date and added how many days each plant was grown before harvested to the biomass dataframe. Then calculated thermal times for weather data using `BioGro`, using only the thermal times for the days of harvest. 
 ```{r}
+library(BioCro)
+
 biomass_data_single <- biomass_data_all %>% 
-  mutate(days_grown = as.integer(as.Date(as.character(biomas_harvested),format="%m/%d/%Y") - as.Date(as.character(seeds_in_germination),format="%m/%d/%Y")))
+  select(biomas_harvested, Stem = stemDW.mg., Leaf = leaf.DW.mg., Root = roots.DW..mg., Grain = panicle.DW.mg.) %>% 
+  group_by(biomas_harvested) %>% 
+  summarise_at(vars(Stem:Grain), mean) %>% 
+  mutate(days_grown = as.integer(as.Date(as.character(biomas_harvested), format = "%m/%d/%Y") - as.Date(as.character(biomass_data_all$seeds_in_germination[1]), format = "%m/%d/%Y")))
 
 weather_only_run <- BioGro(OpBioGro_weather, day1 = 1, dayn = 365)
 weather_only_run_df <- as.data.frame(unclass(weather_only_run)[1:11]) %>%
@@ -127,12 +103,13 @@ weather_only_run_df <- as.data.frame(unclass(weather_only_run)[1:11]) %>%
 Combined biomass data for stem, leaf, panicle/grain, and root from data with corresponding calculated thermal time. Added in values of zero for rhizome at each thermal time point. Lastly estimated LAI using leaf biomass measurements with SLA. All values are plotted against thermal time. 
 ```{r}
 SLA_mg <- 80 / 1000000
+
 OpBioGro_biomass <- left_join(biomass_data_single, weather_only_run_df, by = "days_grown") %>% 
-  select(ThermalT, Stem = stemDW.mg., Leaf = leaf.DW.mg., Root = roots.DW..mg., Grain = panicle.DW.mg.) %>% 
-  mutate(Rhizome = rep(0, 6), 
-         LAI = SLA_mg * Leaf)
-OpBioGro_biomass <- data.frame(OpBioGro_biomass) %>% 
-  arrange(ThermalT)
+  select(ThermalT, Stem, Leaf, Root, Grain) %>% 
+  mutate(Rhizome = rep(0, nrow(biomass_data_single)), 
+         LAI = SLA_mg * Leaf) %>% 
+  arrange(ThermalT) %>% 
+  data.frame()
 
 OpBioGro_biomass_plot <- OpBioGro_biomass %>% 
   tidyr::pivot_longer(Stem:LAI)
@@ -141,7 +118,7 @@ ggplot(OpBioGro_biomass_plot %>% filter(name != "LAI"), aes(x = ThermalT, y = va
   ylab("Dry Weight (mg)")
 ggplot(OpBioGro_biomass_plot %>% filter(name == "LAI"), aes(x = ThermalT, y = value)) +
   geom_line() +
-  ylab("Leaf Area Index (units?)")
+  ylab("Leaf Area Index (m2 leaf/m2 ground)")
 ```
 
 ### Estimate coefficients
@@ -166,8 +143,7 @@ valid_dbp(initial_coefs)
 ```
 
 The previously generated weather data, along with those initial estimated biomass coefficients and the biomass measurements, are passed to the function that optimizes for biomass partitioning coefficients. This is optimized for all six phenological stages because of the `phen` argument. 
-```{r}
-# defaults day1 = 90; dayn = 330
+```{r, results='hide', message=FALSE}
 biomass_coefs <- constrOpBioGro(phen = 0, 
                                 WetDat = OpBioGro_weather,
                                 data = OpBioGro_biomass, 
@@ -177,6 +153,7 @@ biomass_coefs <- constrOpBioGro(phen = 0,
 biomass_coefs
 ```
 
+The biomass coefficients are converted into the format required by the function `BioGro` and then read into this function with the weather data to get biomass estimates. These are plotted, along with the biomass measurements. 
 ```{r}
 biomass_coefs_list <- list(tp1 = as.vector(unlist(biomass_coefs$list1$phenoP[1])), 
                            tp2 = as.vector(unlist(biomass_coefs$list1$phenoP[2])), 
@@ -184,18 +161,18 @@ biomass_coefs_list <- list(tp1 = as.vector(unlist(biomass_coefs$list1$phenoP[1])
                            tp4 = as.vector(unlist(biomass_coefs$list1$phenoP[4])), 
                            tp5 = as.vector(unlist(biomass_coefs$list1$phenoP[5])), 
                            tp6 = as.vector(unlist(biomass_coefs$list1$phenoP[6])), 
-           kLeaf1 = biomass_coefs$coefs[1], kStem1 = biomass_coefs$coefs[2], 
-           kRoot1 = biomass_coefs$coefs[3], kRhizome1 = biomass_coefs$coefs[4], #kGrain1 = 0.0, 
-           kLeaf2 = biomass_coefs$coefs[5], kStem2 = biomass_coefs$coefs[6], 
-           kRoot2 = biomass_coefs$coefs[7], kRhizome2 = biomass_coefs$coefs[8], #kGrain2 = 0.0,
-           kLeaf3 = biomass_coefs$coefs[9], kStem3 = biomass_coefs$coefs[10], 
-           kRoot3 = biomass_coefs$coefs[11], kRhizome3 = biomass_coefs$coefs[12], #kGrain3 = 0.0, 
-           kLeaf4 = biomass_coefs$coefs[13], kStem4 = biomass_coefs$coefs[14], 
-           kRoot4 = biomass_coefs$coefs[15], kRhizome4 = biomass_coefs$coefs[16], #kGrain4 = 0.0, 
-           kLeaf5 = biomass_coefs$coefs[17], kStem5 = biomass_coefs$coefs[18], 
-           kRoot5 = biomass_coefs$coefs[19], kRhizome5 = biomass_coefs$coefs[20], #kGrain5 = 0.0, 
-           kLeaf6 = biomass_coefs$coefs[21], kStem6 = biomass_coefs$coefs[22], 
-           kRoot6 = biomass_coefs$coefs[23], kRhizome6 = biomass_coefs$coefs[24], kGrain6 = biomass_coefs$coefs[25]) 
+                           kLeaf1 = biomass_coefs$coefs[1], kStem1 = biomass_coefs$coefs[2], 
+                           kRoot1 = biomass_coefs$coefs[3], kRhizome1 = biomass_coefs$coefs[4], #kGrain1 = 0.0, 
+                           kLeaf2 = biomass_coefs$coefs[5], kStem2 = biomass_coefs$coefs[6], 
+                           kRoot2 = biomass_coefs$coefs[7], kRhizome2 = biomass_coefs$coefs[8], #kGrain2 = 0.0,
+                           kLeaf3 = biomass_coefs$coefs[9], kStem3 = biomass_coefs$coefs[10], 
+                           kRoot3 = biomass_coefs$coefs[11], kRhizome3 = biomass_coefs$coefs[12], #kGrain3 = 0.0, 
+                           kLeaf4 = biomass_coefs$coefs[13], kStem4 = biomass_coefs$coefs[14], 
+                           kRoot4 = biomass_coefs$coefs[15], kRhizome4 = biomass_coefs$coefs[16], #kGrain4 = 0.0, 
+                           kLeaf5 = biomass_coefs$coefs[17], kStem5 = biomass_coefs$coefs[18], 
+                           kRoot5 = biomass_coefs$coefs[19], kRhizome5 = biomass_coefs$coefs[20], #kGrain5 = 0.0, 
+                           kLeaf6 = biomass_coefs$coefs[21], kStem6 = biomass_coefs$coefs[22], 
+                           kRoot6 = biomass_coefs$coefs[23], kRhizome6 = biomass_coefs$coefs[24], kGrain6 = biomass_coefs$coefs[25]) 
 
 biomass_ests <- BioGro(WetDat = OpBioGro_weather, 
                        #iCoef = initial_coefs, 
